@@ -3,7 +3,7 @@ package org.example.neuefische_recapproject_todolist.chatgpt.service;
 import org.example.neuefische_recapproject_todolist.chatgpt.model.ChatGptMessage;
 import org.example.neuefische_recapproject_todolist.chatgpt.model.ChatGptRequest;
 import org.example.neuefische_recapproject_todolist.chatgpt.model.ChatGptResponse;
-import org.example.neuefische_recapproject_todolist.model.ToDoDTO;
+import org.example.neuefische_recapproject_todolist.exception.ChatGPTNull;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
@@ -25,7 +25,7 @@ public class ChatGptApiService {
         this.restClient = builder.build();
     }
 
-    public String getChatGptResponse(String description) {
+    public String getChatGptResponse(String description) throws ChatGPTNull {
         ChatGptResponse response = restClient.post()
                 .uri("https://api.openai.com/v1/chat/completions")
                 .header(HttpHeaders.AUTHORIZATION, "Bearer " + apiKey)
@@ -36,7 +36,10 @@ public class ChatGptApiService {
                 ))
                 .retrieve()
                 .body(ChatGptResponse.class);
-
-        return response.choices().get(0).message().content();
+        if (response == null) {
+            throw new ChatGPTNull("Response is null");
+        } else {
+            return response.choices().getFirst().message().content();
+        }
     }
 }
